
1.0b5

 I've decided to move to a more traditional version numbering system as we approach a final 1.0 release. :)
 
 New Features:

  * There is now a preferences window which allows for changing of colors on the map display, font sizes, and more.
  * Your own unit is now drawn in a bold line on the tactical map to help differentiate it in large battles.
  * You can now show cliffs, which will highlight edges in red which will cause a fall or halt.
  * Changes to internal way that maps are stored.
  * Thud will now exit when the main window is closed.
  
 Bug Fixes:
  
  * Thud now handles underground maps properly (unknown hexes show up black on the tactical display).
  * Some work on map correctness done, but there's still more to do.
  * A lot of small bug fixes
  
1.0b6

 The focus of this release is efficiency of speed and, to a lesser extent, memory. 
 The vast majority of the work was put into bug fixes and not new features, but the result is a much more stable and useful Thud.
 
 New Features:
 
  * Better ANSI support: background colors and underline mode now supported
  * If you are in a tank, it will show a red line indicating turret facing
  * Other jumping mechs show a green line indicating jump heading
  * Hex numbers along side and top now have a black bar behind them to make them much easier to read
  * New option to display your heat level in the tactical display underneath your unit
  
 Bug Fixes:
 
  * Much much quicker connect-to-MUX time
  * Much quicker text handling
  * More efficient and usable map scrolling
  * Contact window listing is quicker and flickers less
  * Elevation numbers now show when 'Darken Elevations' is turned off
  * If the connection is dropped for some reason, Thud should now behave better -- choose your connection from the menu to reconnect
  * Menu items properly disabled/enabled depending on connection status
  * Choosing a new connection while still connected should disconnect properly first, then reconnect
  
  